hphp/hack/test/typecheck/reserved_name22.php.exp
File "reserved_name22.php", line 5, characters 7-14:
Arraykey cannot be used as it is reserved. (Naming[2068])
