hphp/hack/test/typecheck/reserved_name22.php
<?hh

namespace Foo;

class Arraykey {}
